Wed Aug 26 19:51:13 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/mkconfig.rb (program_transform_name): fix for multiple trans
	  rules for autoconf 2.61 or earlier.

	* tool/rbinstall.rb (program_transform_name): ditto.

Wed Aug 26 19:20:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): unified random_int and random_float.
	  [ruby-dev:39158].  and fixes [ruby-core:24655], [ruby-core:24677],
	  [ruby-core:24679].

Wed Aug 26 18:59:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/test_tempfile.rb: merged from Hongli Lai's fork.
	  cf [ruby-core:25131].

Wed Aug 26 18:49:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#close!): should not undefine finalizer
	  by just unlink.

Wed Aug 26 17:00:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb (program_transform_name): fix for autoconf 2.61
	  or earlier.

Wed Aug 26 14:34:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#close!, Tempfile#path): added side
	  notes from Hongli Lai's fork.

	* lib/tempfile.rb (Tempfile#unlink, Tempfile.callback): do nothing
	  any more once unlinked.

Wed Aug 26 13:48:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#unlink): reverted r23494, since the
	  usage in RubyInline is considered wrong.

Wed Aug 26 12:36:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (collect_local_variables_in_env): skips internal variables.
	  [ruby-core:25125]

Tue Aug 25 23:51:07 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/enc-unicode.rb: added for generate name2ctype.kwd.
	  contributed by Run Paint Run Run [ruby-core:24775]

	* enc/unicode.c (CodeRanges): move definitions to name2ctype.h.

	* enc/unicode/name2ctype.h.blt, enc/unicode/name2ctype.kwd,
	  enc/unicode/name2ctype.src: updated to v5.1.

	* enc/unicode/UnicodeData.txt, enc/unicode/Scripts.txt: added v5.1.

	* Makefile.in: add rule to generate name2ctype.kwd from