@@ -1,3 +1,8 @@
+Wed Aug 26 21:49:23 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/tempfile.rb: add documents from Hongli Lai's fork.
+	  cf [ruby-core:25131].
+
 Wed Aug 26 19:51:13 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* tool/mkconfig.rb (program_transform_name): fix for multiple trans
